# rageval

./: .flake8  .github.yml  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  demo.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.py  test_answer_claim_recall.py  test_nli.py  test_text_length.py  tmp.py
.github/workflows/: makefile.yml
benchmark/auto/: README.md  auto_benchmark.py  prompt.py  run.sh
benchmarks/: __init__.py  base.py  utils.py
benchmarks/ASQA/: README.md  asqa_benchmark.py  evaluate.py  generate.py  prompts.py  run.sh  run_generate.sh  t.py
benchmarks/HOTPOTQA/: README.md  generate.py  hotpotqa_benchmark.py  prompts.py  run.sh  run_generate.sh
benchmarks/WebGLM/: generate.py  run.sh  webglm_benchmark.py
benchmarks/auto/: README.md  auto_benchmark.py  prompt.py  run.sh
hotfix/change_metric_input/: _answer_accuracy.py  _answer_chrf.py  _answer_citation_precision.py  _answer_citation_recall.py  _answer_claim_recall.py  _answer_disambig_f1.py  _answer_edit_distance.py  _answer_exact_match.py  _answer_f1.py  _answer_lcs_ratio.py
hotfix/change_tests_units/: test_answer_accuracy.py  test_answer_bleu.py  test_answer_chrf.py  test_answer_citation_precision.py  test_answer_citation_recall.py  test_answer_disambig_f1.py  test_answer_edit_distance.py  test_answer_ter.py
rageval/: __init__.py  evaluations.py  utils.py  version.py
rageval/llms/: __init__.py  base.py  openai.py
rageval/metrics/: __init__.py  _answer_accuracy.py  _answer_bert_score.py  _answer_bertscore.py  _answer_bleu.py  _answer_chrf.py  _answer_citation_precision.py  _answer_citation_recall.py  _answer_claim_recall.py  _answer_context_relevance.py  _answer_disambig_f1.py  _answer_distinct12.py  _answer_distinct_12.py  _answer_edit_distance.py  _answer_exact_match.py  _answer_f1.py  (+21 more)
tests/: demo.py  test_answer_groundedness.py  test_evaluation.py
tutorials/: README.md
(+100 files in other folders)
